add: fixed_aeda

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,27 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from koeda import AEDA\n",
     "from tqdm import tqdm\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "from koeda import AEDA\n",
+    "import random\n",
+    "\n",
+    "SPACE_TOKEN = \"\\u241F\"\n",
+    "\n",
+    "\n",
+    "def replace_space(text: str) -> str:\n",
+    "    return text.replace(\" \", SPACE_TOKEN)\n",
+    "\n",
+    "\n",
+    "def revert_space(text: list) -> str:\n",
+    "    clean = \" \".join(\"\".join(text).replace(SPACE_TOKEN, \" \").split()).strip()\n",
+    "    return clean\n",
+    "\n",
+    "class Fixed_AEDA(AEDA):\n",
+    "    def _aeda(self, data: str, p: float) -> str:\n",
+    "        if p is None:\n",
+    "            p = self.ratio\n",
+    "\n",
+    "        split_words = self.morpheme_analyzer.morphs(replace_space(data))\n",
+    "        words = self.morpheme_analyzer.morphs(data)\n",
+    "\n",
+    "        # 몇번째 토큰이 '\\u241F'인지 찾기\n",
+    "        space_indices = [] # space token index 저장\n",
+    "        token_indices = [] # space를 제외한 token의 index 저장\n",
+    "\n",
+    "        for i, word in enumerate(split_words):\n",
+    "            if word == SPACE_TOKEN:\n",
+    "                space_indices.append(i)\n",
+    "            else: # space 아님\n",
+    "                token_indices.append(i)\n",
+    "\n",
+    "\n",
+    "        new_words = []\n",
+    "        q = random.randint(1, int(p * len(words) + 1))\n",
+    "        qs = random.sample(token_indices, q)\n",
+    "        \n",
+    "        for j, word in enumerate(split_words):\n",
+    "            if j in qs:\n",
+    "                new_words.append(SPACE_TOKEN)\n",
+    "                new_words.append(\n",
+    "                    self.punctuations[random.randint(0, len(self.punctuations) - 1)])\n",
+    "                new_words.append(SPACE_TOKEN)\n",
+    "                new_words.append(word)\n",
+    "            else:\n",
+    "                new_words.append(word)\n",
+    "\n",
+    "        augmented_sentences = revert_space(new_words)\n",
+    "\n",
+    "        return augmented_sentences\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Klue dataset에 확인"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -12041,7 +12098,7 @@
        " ...]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12052,7 +12109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -12061,7 +12118,7 @@
        "32470"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -12072,7 +12129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12083,7 +12140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -13092,7 +13149,7 @@
        " ...]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13103,40 +13160,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aeda = AEDA(\n",
+    "aeda = Fixed_AEDA(\n",
     "    morpheme_analyzer=\"Okt\", punc_ratio=0.4, punctuations=[\".\", \",\", \"!\", \"?\", \";\", \":\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 12/32470 [00:02<1:56:36,  4.64it/s]\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/ubuntu/minji/KoEDA_revised/test.ipynb 셀 9\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2Bjaypark/home/ubuntu/minji/KoEDA_revised/test.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfor\u001b[39;00m text \u001b[39min\u001b[39;00m tqdm(re_sentence):\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bjaypark/home/ubuntu/minji/KoEDA_revised/test.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m     result \u001b[39m=\u001b[39m aeda(text)\n",
-      "File \u001b[0;32m~/anaconda3/envs/py38mj/lib/python3.8/site-packages/koeda/aeda.py:35\u001b[0m, in \u001b[0;36mAEasierDataAugmentation.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs):\n\u001b[0;32m---> 35\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49maeda(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
-      "File \u001b[0;32m~/anaconda3/envs/py38mj/lib/python3.8/site-packages/koeda/aeda.py:42\u001b[0m, in \u001b[0;36mAEasierDataAugmentation.aeda\u001b[0;34m(self, data, p, repetition)\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(data, \u001b[39mstr\u001b[39m):\n\u001b[1;32m     41\u001b[0m     \u001b[39mif\u001b[39;00m repetition \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m---> 42\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_aeda(data, p)\n\u001b[1;32m     43\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     44\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mlist\u001b[39m(\n\u001b[1;32m     45\u001b[0m             \u001b[39mmap\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_aeda, repeat(data, repetition), repeat(p, repetition))\n\u001b[1;32m     46\u001b[0m         )\n",
-      "File \u001b[0;32m~/anaconda3/envs/py38mj/lib/python3.8/site-packages/koeda/aeda.py:73\u001b[0m, in \u001b[0;36mAEasierDataAugmentation._aeda\u001b[0;34m(self, data, p)\u001b[0m\n\u001b[1;32m     70\u001b[0m qs \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39msample(\u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(split_words)), q)\n\u001b[1;32m     72\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcheck_special_selection(split_words, qs):\n\u001b[0;32m---> 73\u001b[0m     qs \u001b[39m=\u001b[39m random\u001b[39m.\u001b[39;49msample(\u001b[39mrange\u001b[39;49m(\u001b[39m0\u001b[39;49m, \u001b[39mlen\u001b[39;49m(split_words)), q)\n\u001b[1;32m     75\u001b[0m \u001b[39mfor\u001b[39;00m j, word \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(split_words):\n\u001b[1;32m     76\u001b[0m     \u001b[39mif\u001b[39;00m j \u001b[39min\u001b[39;00m qs:\n",
-      "File \u001b[0;32m~/anaconda3/envs/py38mj/lib/python3.8/random.py:374\u001b[0m, in \u001b[0;36mRandom.sample\u001b[0;34m(self, population, k)\u001b[0m\n\u001b[1;32m    372\u001b[0m         j \u001b[39m=\u001b[39m randbelow(n\u001b[39m-\u001b[39mi)\n\u001b[1;32m    373\u001b[0m         result[i] \u001b[39m=\u001b[39m pool[j]\n\u001b[0;32m--> 374\u001b[0m         pool[j] \u001b[39m=\u001b[39m pool[n\u001b[39m-\u001b[39mi\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]   \u001b[39m# move non-selected item into vacancy\u001b[39;00m\n\u001b[1;32m    375\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    376\u001b[0m     selected \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m()\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "100%|██████████| 32470/32470 [06:12<00:00, 87.08it/s] \n"
      ]
     }
    ],
@@ -13154,165 +13210,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aeda = AEDA(\n",
-    "    morpheme_analyzer=\"Okt\", punc_ratio=0.4, punctuations=[\".\", \",\", \"!\", \"?\", \";\", \":\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text =  '양당이 모두 해체한 뒤 신당을 창당하는 것이 아닌 유신당이 해체 뒤 기존의 민주당에 합류하는 방식이기 때문에, 옛 모두의 당 시절 비례대표로 선출되어 두레당을 거쳐 유신당에 합류했던 참의원 의원 5명(오노 지로, 가와다 류헤이, 시바타 다쿠미, 데라타 스케시로, 마야마 유이치)은 국회법 제109조의 2의 규정에 의해 신당에 입당할 경우 의원직이 자동 박탈되기 때문에 유신당 해체와 함께 임기 만료 전까지 무소속 신분을 유지하게 되었다.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result = aeda(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "양당이 모두 해체한 뒤 신당을 . 창당하는 것이 아닌 유신당이 해체 뒤 기존의 민주당에 합류하는 방식이기 , 때문 , 에 ? , 옛 모두의 ? 당 ! 시절 비례대표로 선출되어 두레당을 . 거쳐 유신당에 합류했던 . 참의원 의원 5명(오노 지로 ; , 가 ; 와다 류헤이, 시바타 다쿠미, 데라 ? 타 스케시로, 마 ? 야마 유 : 이치)은 국회법 제109조의 2 ? 의 규정 ! 에 의해 신당에 입당할 경우 의원직이 . 자동 박탈되기 때문에 유신당 해체와 함께 임기 만료 전까지 무소속 신분 , 을 ? 유지하게 되었다.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "from koeda import AEDA\n",
-    "\n",
-    "\n",
-    "SPACE_TOKEN = \"\\u241F\"\n",
-    "\n",
-    "\n",
-    "def replace_space(text: str) -> str:\n",
-    "    return text.replace(\" \", SPACE_TOKEN)\n",
-    "\n",
-    "\n",
-    "def revert_space(text: list) -> str:\n",
-    "    clean = \" \".join(\"\".join(text).replace(SPACE_TOKEN, \" \").split()).strip()\n",
-    "    return clean\n",
-    "\n",
-    "\n",
-    "# 이거 불러와서 AEDA 처럼 쓰시면 됩니다.\n",
-    "class myAEDA(AEDA):\n",
-    "    def _aeda(self, data: str, p: float) -> str:\n",
-    "        if p is None:\n",
-    "            p = self.ratio\n",
-    "\n",
-    "        split_words = self.morpheme_analyzer.morphs(replace_space(data))\n",
-    "        #print(split_words)\n",
-    "        words = self.morpheme_analyzer.morphs(data)\n",
-    "        #print(words)\n",
-    "        new_words = []\n",
-    "        qs_list = [\n",
-    "            index\n",
-    "            for index in range(len(split_words))\n",
-    "            if split_words[index] != SPACE_TOKEN\n",
-    "        ]\n",
-    "        q = random.randint(1, int(p * len(qs_list) + 1))\n",
-    "        qs = random.sample(qs_list, q)\n",
-    "\n",
-    "        for j, word in enumerate(split_words):\n",
-    "            if j in qs:\n",
-    "                new_words.append(SPACE_TOKEN)\n",
-    "                new_words.append(\n",
-    "                    self.punctuations[random.randint(0, len(self.punctuations) - 1)]\n",
-    "                )\n",
-    "                new_words.append(SPACE_TOKEN)\n",
-    "                new_words.append(word)\n",
-    "            else:\n",
-    "                new_words.append(word)\n",
-    "\n",
-    "        augmented_sentences = revert_space(new_words)\n",
-    "\n",
-    "        return augmented_sentences"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aeda = myAEDA(\n",
-    "    morpheme_analyzer=\"Okt\", punc_ratio=0.4, punctuations=[\".\", \",\", \"!\", \"?\", \";\", \":\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text =  '양당이 모두 해체한 뒤 신당을 창당하는 것이 아닌 유신당이 해체 뒤 기존의 민주당에 합류하는 방식이기 때문에, 옛 모두의 당 시절 비례대표로 선출되어 두레당을 거쳐 유신당에 합류했던 참의원 의원 5명(오노 지로, 가와다 류헤이, 시바타 다쿠미, 데라타 스케시로, 마야마 유이치)은 국회법 제109조의 2의 규정에 의해 신당에 입당할 경우 의원직이 자동 박탈되기 때문에 유신당 해체와 함께 임기 만료 전까지 무소속 신분을 유지하게 되었다.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['양', '당', '이', '␟', '모두', '␟', '해체', '한', '␟', '뒤', '␟', '신당', '을', '␟', '창', '당하는', '␟', '것', '이', '␟', '아닌', '␟', '유신', '당', '이', '␟', '해체', '␟', '뒤', '␟', '기존', '의', '␟', '민주당', '에', '␟', '합류', '하는', '␟', '방식', '이기', '␟', '때문', '에', ',', '␟', '옛', '␟', '모두', '의', '␟', '당', '␟', '시절', '␟', '비례대표', '로', '␟', '선출', '되어', '␟', '두레', '당', '을', '␟', '거쳐', '␟', '유신', '당', '에', '␟', '합류', '했던', '␟', '참의원', '␟', '의원', '␟', '5', '명', '(', '오노', '␟', '지로', ',', '␟', '가', '와다', '␟', '류헤이', ',', '␟', '시', '바타', '␟', '다쿠미', ',', '␟', '데', '라', '타', '␟', '스케', '시로', ',', '␟', '마', '야마', '␟', '유', '이치', ')', '은', '␟', '국회법', '␟', '제', '109조', '의␟', '2', '의', '␟', '규정', '에', '␟', '의해', '␟', '신당', '에', '␟', '입당', '할', '␟', '경우', '␟', '의원직', '이', '␟', '자동', '␟', '박탈', '되기', '␟', '때문', '에', '␟', '유신', '당', '␟', '해체', '와', '␟', '함께', '␟', '임기', '␟', '만료', '␟', '전', '까지', '␟', '무소속', '␟', '신분', '을', '␟', '유지', '하게', '␟', '되었다', '.']\n",
-      "['양', '당', '이', '모두', '해체', '한', '뒤', '신당', '을', '창', '당하는', '것', '이', '아닌', '유신', '당', '이', '해체', '뒤', '기존', '의', '민주당', '에', '합류', '하는', '방식', '이기', '때문', '에', ',', '옛', '모두', '의', '당', '시절', '비례대표', '로', '선출', '되어', '두레', '당', '을', '거쳐', '유신', '당', '에', '합류', '했던', '참의원', '의원', '5', '명', '(', '오노', '지로', ',', '가', '와다', '류헤이', ',', '시', '바타', '다쿠미', ',', '데', '라', '타', '스케', '시로', ',', '마', '야마', '유', '이치', ')', '은', '국회법', '제', '109조', '의', '2', '의', '규정', '에', '의해', '신당', '에', '입당', '할', '경우', '의원직', '이', '자동', '박탈', '되기', '때문', '에', '유신', '당', '해체', '와', '함께', '임기', '만료', '전', '까지', '무소속', '신분', '을', '유지', '하게', '되었다', '.']\n"
-     ]
-    }
-   ],
-   "source": [
-    "result = aeda(text)"
-   ]
   },
   {
    "cell_type": "code",
